<resources>
    <string name="app_name">app BDE</string>
    //fragment_home
    <string name="homefragment_title">EVENEMENTS</string>

    //onBoarding
    <string name="onboarding_button_next">SUIVANT</string>
    <string name="onboarding_button_back">RETOUR</string>
    <string name="onboarding_title_1">Parcours les évènements à venir de ton BDE </string>
    <string name="onboarding_text_1">Tout au long de l\'année tu trouveras des évènements variés pour nous retrouver et passer de bons moments.</string>
    <string name="onboarding_title_2">Achète ta place facilement et ne rate aucun évènement</string>
    <string name="onboarding_text_2">Grâce à cette app, tu peux stocker tous tes billets au même endroit, les retrouver rapidement et les faire scanner par l\'équipe du BDE le jour J !</string>
    <string name="onboarding_title_3">Prends contact quand tu veux avec les membres de ton BDE </string>
    <string name="onboarding_text_3">Des questions ? Des précisions ? Nous sommes à ta disposition pour t\'éclairer et t\'aider au mieux à passer des moments inoubliables avec nous !</string>

    //card description
    <string name="descriptioncard_button_takeplace">Prendre ma place</string>

    //Bottom Navigation
    <string name="navigationbar_title_events">ÉVÉNEMENTS</string>
    <string name="navigationbar_title_myaccount">MON COMPTE</string>

    //Login and creation account
    <string name="account_text_email">Adresse e-mail</string>
    <string name="account_text_password">Mot de passe</string>
    <string name="account_text_create_account">Créer un compte</string>
    <string name="account_text_login">Me connecter</string>
    <string name="account_text_first_name">Prénom</string>
    <string name="account_text_last_name">Nom</string>
    <string name="account_spinner_promotion">Classe</string>
    <string name="account_spinner_formation">Filière</string>

    <string name="test">Vous l\'attendiez tous, la soirée la plus chaude de l\'année est de retour à Espit Chupitos !<br></br>
<br></br>
Rendez-vous ce mercredi 13 novembre de 21h à 3h !<br></br>
Pour l\'occasion, tous les shots seront à 2€.<br></br>
<br></br>
L\'entrée se fera uniquement sous prévente, les tarifs sont les suivants : 2€ pour les adhérents au BDE et 5€ pour les non adhérents.<br></br>
<br></br>
 On compte sur vous pour une soirée de folie !</string>
    //fragment QRCodeScanner
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qrcode_scanpls">Scanner le QR-Code</string>
    <string name="button_place">Prendre ma place</string>

    //fragment_account
    <string name="my_informations">MES INFORMATIONS</string>
    <string name="my_tickets">MES BILLETS</string>
    //fragment_settings_user_profil
    <string name="fragment_settings_user_profil_title">Réglages</string>
    <string name="personal_information">Informations personnelles</string>
    <string name="how_use_app">Comment utiliser l\'application</string>
    <string name="payment_information">Information de payement</string>
    <string name="delete_account">Supprimer le compte</string>
    <string name="logout">Déconnexion</string>
    //fragment_personal_informations_user et fragment_edit_informations_profile
    <string name="fragment_personal_informations_user_title">Informations Personnelles</string>
    //fragment_personal_informations_user
    <string name="labelName"><font size="35">Prénom Nom</font></string>
    <string name="labelPromotion"><font size="35">Niveau/Filière</font></string>
    //--- xhdpi ---
    <string name="labelName_xhdpi"><font size="25">Prénom Nom</font></string>
    <string name="labelPromotion_xhdpi"><font size="25">Niveau/Filière</font></string>
    //--- xxxhdpi ---
    <string name="labelName_xxxhdpi"><font size="50">Prénom Nom</font></string>
    <string name="labelPromotion_xxxhdpi"><font size="50">Niveau/Filière</font></string>
    //--- mdpi ---
    <string name="labelName_mdpi"><font size="13">Prénom Nom</font></string>
    <string name="labelPromotion_mdpi"><font size="13">Niveau/Filière</font></string>
    //--- mdpi ---
    //--- hdpi ---
    <string name="labelName_hdpi"><font size="16">Prénom Nom</font></string>
    <string name="labelPromotion_hdpi"><font size="16">Niveau/Filière</font></string>
    //--- hdpi ---
    <string name="edit_my_password">Modifier mon mot de passe</string>
    <string name="edit">Modifier</string>
    //fragment_edit_informations_profile
    <string name="labelLastName"><font size="35">Nom</font></string>
    <string name="labelFirstName"><font size="35">Prénom</font></string>
    <string name="labelPromotionLevel"><font size="35">Niveau</font></string>
    <string name="labelPromotionSchool"><font size="35">Filière</font></string>
    //--- xhdpi ---
    <string name="labelLastName_xhdpi"><font size="25">Nom</font></string>
    <string name="labelFirstName_xhdpi"><font size="25">Prénom</font></string>
    <string name="labelPromotionLevel_xhdpi"><font size="25">Niveau</font></string>
    <string name="labelPromotionSchool_xhdpi"><font size="25">Filière</font></string>
    <string name="last_password_xhdpi"><font size="25">Ancien mot de passe</font></string>
    <string name="new_password_xhdpi"><font size="25">Nouveau mot de passe</font></string>
    <string name="confirm_new_password_xhdpi"><font size="25">Confirmation nouveau mot de passe</font></string>
    <string name="validate_xhdpi">Valider</string>
    //--- xxxhdpi ---
    //fragment_edit_informations_profile
    <string name="labelLastName_xxxhdpi"><font size="50">Nom</font></string>
    <string name="labelFirstName_xxxhdpi"><font size="50">Prénom</font></string>
    <string name="labelPromotionLevel_xxxhdpi"><font size="50">Niveau</font></string>
    <string name="labelPromotionSchool_xxxhdpi"><font size="50">Filière</font></string>
    <string name="last_password_xxxhdpi"><font size="50">Ancien mot de passe</font></string>
    <string name="new_password_xxxhdpi"><font size="50">Nouveau mot de passe</font></string>
    <string name="confirm_new_password_xxxhdpi"><font size="50">Confirmation nouveau mot de passe</font></string>
    <string name="validate_xxxhdpi">Valider</string>
    //--- mdpi ---
    <string name="labelLastName_mdpi"><font size="13">Nom</font></string>
    <string name="labelFirstName_mdpi"><font size="13">Prénom</font></string>
    <string name="labelPromotionLevel_mdpi"><font size="13">Niveau</font></string>
    <string name="labelPromotionSchool_mdpi"><font size="13">Filière</font></string>
    //--- mdpi ---
    //--- hdpi ---
    <string name="labelLastName_hdpi"><font size="16">Nom</font></string>
    <string name="labelFirstName_hdpi"><font size="16">Prénom</font></string>
    <string name="labelPromotionLevel_hdpi"><font size="16">Niveau</font></string>
    <string name="labelPromotionSchool_hdpi"><font size="16">Filière</font></string>
    //--- hdpi ---
    <string name="last_password">Ancien mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="confirm_new_password">Confirmation nouveau mot de passe</string>
    <string name="validate">Valider</string>
</resources>
