<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sign_in_background"
    tools:context=".ui.screens.profil.SettingsUserProfil">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Personal informations field-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tiPersonalInformation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:paddingStart="20dp"
            android:background="@color/settings_choice"
            app:backgroundTint="@color/settings_choice"
            android:drawableEnd="@drawable/ic_arrow_left"
            android:hint="@string/personal_information"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toTopOf="@+id/tiHowUseApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- How use app field-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tiHowUseApp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:paddingStart="20dp"
            android:background="@color/settings_choice"
            app:backgroundTint="@color/settings_choice"
            android:drawableEnd="@drawable/ic_arrow_left"
            android:hint="@string/how_use_app"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toTopOf="@+id/tiPayementInformation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiPersonalInformation"/>

        <!-- Payement informations field-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tiPayementInformation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:paddingStart="20dp"
            android:background="@color/settings_choice"
            app:backgroundTint="@color/settings_choice"
            android:drawableEnd="@drawable/ic_arrow_left"
            android:hint="@string/payment_information"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toTopOf="@+id/tiDeleteAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiHowUseApp"/>

        <!-- Delete account field-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tiDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:paddingStart="20dp"
            android:background="@color/settings_choice"
            app:backgroundTint="@color/settings_choice"
            android:drawableEnd="@drawable/ic_arrow_left"
            android:hint="@string/delete_account"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toTopOf="@+id/tiLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiPayementInformation"/>

        <!-- Delete account field-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tiLogout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:background="@color/settings_choice"
            android:drawableEnd="@drawable/ic_arrow_left"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/logout"
            android:paddingStart="20dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:backgroundTint="@color/settings_choice"
            app:boxBackgroundMode="filled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiDeleteAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

